Fix notification icon spacing with layout management icon

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/TopBar/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/TopBar/Style.less
@@ -66,6 +66,7 @@ body {
 
   .UITopBarContainerItemsParent {
     display: flex;
+    padding-right: 8px;
 
     .UITopBarContainerItem {
       margin: auto;
@@ -157,7 +158,6 @@ body.decrease-z-index-more #UITopBarContainer {
 
 .NotificationTopBarTDContainer {
   #NotificationPopoverPortlet {
-    margin-right: 10px;
     .container.white{
       width: auto!important;
     }
